--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,7 @@ body{
 
                 .instructions ol li p{
                     margin-left:3% ;
+                    line-height: 24px;
                 }
 
         .instructions a{
@@ -175,4 +176,122 @@ footer{
     line-height: 17px;
     color: #BDBDBD;
     text-align: center;
+}
+
+@media screen and (max-width:1200px){
+    .timings h4{
+        font-size: 10px;
+    }
+    .timings h5{
+        font-size: 8px;
+    }
+    .header-text{
+        width: 80%;
+    }
+}
+
+@media screen and (max-width:800px){
+    header h1{
+        font-size: 36px;
+    }
+    .timings h4{
+        margin-top: 2%;
+        font-size: 8px;
+    }
+    .timings h5{
+        font-size: 6px;
+    }
+}
+
+@media  screen and (max-width:650px) {
+    body{
+        margin: 8% 3% 0;
+    }
+        header h1{
+            font-size: 24px;
+            line-height: 32px;
+        }
+        .header-text{
+            width: 95%;
+        }
+            .header-text p{
+                font-size: 12px;
+                line-height: 15px;
+                margin-left: 2%;
+            }
+        .banner img{
+            border-radius: 4%;
+        }
+        .content{
+            flex-direction: column;
+        }
+        .timings{
+            width: 100%;
+            box-shadow: none;
+        }
+            .timings ul{
+                margin: 0;
+                display:flex;
+                flex-wrap: wrap;
+            }
+                .timings li:nth-child(1){
+                    width: 100%;
+                    padding-right: 40%;
+                    height: fit-content;
+                }
+                .timings li:nth-child(n+2){
+                    flex:1;
+                    height:fit-content;
+                    margin: 5% 0 8%;
+                }
+                    .timings img{
+                        width: 15%;
+                        padding: 5%;
+                    }
+                    .timings li:nth-child(1) img{
+                        width: 8%;
+                        padding: 3%;
+                    }
+                    .timings h5{
+                        font-size: 8px;
+                        line-height: 10px;
+                    }
+                    .timings h4{
+                        margin-top:0;
+                        font-size: 10px;
+                        line-height: 12px;
+                    }
+        .texts{
+            width: 100%;
+        }
+                .ingredients h5{
+                    font-size: 16px;
+                    margin: 8% 0;
+                }
+                .ingredients h5:nth-child(1){
+                    margin-top: 3%;
+                }
+                    .ingredients li{
+                        font-size: 14px;
+                        line-height: 25px;
+                        margin-bottom: 3%;
+                    }
+                    .ingredients li label{
+                        margin: -2% 0 0 3%;
+                    }
+            .instructions ol li::before{
+                padding: 0.5% 3%;
+                font-size: 20px;
+            }
+            .instructions ol li{
+                margin: 8% 0;
+            }
+
+            .instructions a{
+                font-size: 12px;
+            }
+
+    footer{
+        font-size: 12px;
+    }
 }
